[dev] Add to the JSON result the duplication code and files list